changed profile img, updated text

--- a/css/styles.production.css
+++ b/css/styles.production.css
@@ -1,17 +1,17 @@
-:root {
-  --primary-color: #357b70;
-  --secondary-color: #e0b354;
-  --dark-grey: #2b2b2b;
-  --body-bg-color: #efeeee;
-  --link-active-color: #489c79;
-}
+/*
+* Prefixed by https://autoprefixer.github.io
+* PostCSS: v7.0.29,
+* Autoprefixer: v9.7.6
+* Browsers: last 2 version
+*/
 
 * {
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
 }
 
 body {
-  background-color: var(--body-bg-color);
+  background-color: #efeeee;
   font-family: 'Montserrat', sans-serif;
   font-weight: 400;
   font-size: 14px;
@@ -37,9 +37,13 @@ h3 {
   font-size: 16px;
 }
 
-a,
+a {
+  color: #357b70;
+  text-decoration: none;
+}
+
 a:visited {
-  color: var(--primary-color);
+  color: #357b70;
   text-decoration: none;
 }
 
@@ -49,7 +53,7 @@ a:focus {
 }
 
 a:active {
-  color: var(--link-active-color);
+  color: #489c79;
   text-decoration: underline;
 }
 
@@ -64,6 +68,7 @@ button,
   padding: 10px;
   border-radius: 3px;
   border-bottom: 2px solid rgba(0, 0, 0, 0.1);
+  -webkit-transition: 0.8s opacity;
   transition: 0.8s opacity;
   display: inline-block;
   margin: 5px 5px 5px 0;
@@ -77,13 +82,19 @@ button:focus,
   opacity: 0.8;
 }
 
-.button__secondary,
+.button__secondary {
+  background-color: #e0b354;
+  color: #2b2b2b;
+}
+
 .button__secondary:visited {
-  background-color: var(--secondary-color);
-  color: var(--dark-grey);
+  background-color: #e0b354;
+  color: #2b2b2b;
 }
 
 .page-header {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   width: 100%;
   padding: 30px;
@@ -91,11 +102,15 @@ button:focus,
 }
 
 .page-header__item {
-  flex: 0 1 200px;
+  -webkit-box-flex: 0;
+      -ms-flex: 0 1 200px;
+          flex: 0 1 200px;
 }
 
 .page-header__item:last-child {
-  flex-grow: 1;
+  -webkit-box-flex: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
   text-align: right;
 }
 
@@ -130,6 +145,16 @@ button:focus,
   margin: 0 5px;
 }
 
+@-webkit-keyframes color-change {
+  from {
+    fill: #edc655;
+  }
+
+  to {
+    fill: #f76414;
+  }
+}
+
 @keyframes color-change {
   from {
     fill: #edc655;
@@ -141,35 +166,66 @@ button:focus,
 }
 
 .sun {
-  animation: 4s color-change infinite alternate linear;
+  -webkit-animation: 4s color-change infinite alternate linear;
+          animation: 4s color-change infinite alternate linear;
+}
+
+@-webkit-keyframes cloud-move {
+  from {
+    -webkit-transform: translate(0, 50px);
+            transform: translate(0, 50px);
+  }
+
+  to {
+    -webkit-transform: translate(200px, 50px);
+            transform: translate(200px, 50px);
+  }
 }
 
 @keyframes cloud-move {
   from {
-    transform: translate(0, 50px);
+    -webkit-transform: translate(0, 50px);
+            transform: translate(0, 50px);
   }
 
   to {
-    transform: translate(200px, 50px);
+    -webkit-transform: translate(200px, 50px);
+            transform: translate(200px, 50px);
   }
 }
 
 .cloud-front {
-  animation: 30s cloud-move infinite alternate linear;
+  -webkit-animation: 30s cloud-move infinite alternate linear;
+          animation: 30s cloud-move infinite alternate linear;
+}
+
+@-webkit-keyframes cloud-move-reverse {
+  from {
+    -webkit-transform: translate(446px, 48px);
+            transform: translate(446px, 48px);
+  }
+
+  to {
+    -webkit-transform: translate(100px, 48px);
+            transform: translate(100px, 48px);
+  }
 }
 
 @keyframes cloud-move-reverse {
   from {
-    transform: translate(446px, 48px);
+    -webkit-transform: translate(446px, 48px);
+            transform: translate(446px, 48px);
   }
 
   to {
-    transform: translate(100px, 48px);
+    -webkit-transform: translate(100px, 48px);
+            transform: translate(100px, 48px);
   }
 }
 
 .cloud-back {
-  animation: 34s cloud-move-reverse infinite alternate linear;
+  -webkit-animation: 34s cloud-move-reverse infinite alternate linear;
+          animation: 34s cloud-move-reverse infinite alternate linear;
 }
 
 .language-skills {
@@ -182,7 +238,9 @@ button:focus,
 }
 
 .grid {
+  display: -ms-grid;
   display: grid;
+  -ms-grid-columns: 1fr 15px 1fr 15px 1fr;
   grid-template-columns: 1fr 1fr 1fr;
   grid-gap: 15px;
 }
@@ -194,7 +252,10 @@ button:focus,
 }
 
 .grid__item:last-child {
+  -ms-grid-column: 3;
   grid-column: 3 / 3;
+  -ms-grid-row: 1;
+  -ms-grid-row-span: 2;
   grid-row: 1 / 3;
 }
 
@@ -202,19 +263,26 @@ button:focus,
   clear: both;
   padding: 20px;
   margin: 20px;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
   text-align: center;
 }
 
 @media all and (max-width: 500px) {
   .grid {
+    -ms-grid-columns: 1fr;
     grid-template-columns: 1fr;
   }
 }
 
 @media all and (min-width: 500px) and (max-width: 750px) {
   .grid {
+    -ms-grid-columns: 1fr 15px 1fr;
     grid-template-columns: 1fr 1fr;
   }
 }
